# actix-web-practice

./: Cargo.toml  Dockerfile  Dockerfile.bak  Makefile  README.md  docker-compose.yml
migrations/2021-05-13-171643_add_users/: up.sql
src/: main.rs  postgres.rs  routes.rs  schema.rs  settings.rs
src/controllers/: user_controller.rs
src/handlers/: users.rs
src/models/: users.rs
