[package]
name = "bjira"
version = "0.1.0"
authors = ["Okan Akdogan <okan.akdogan@arcelik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mongodb = "1.2.1"
chrono = { version = "0.4.19", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres","r2d2","uuidv07", "chrono"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
config = "0.11.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8.3"